<resources>
    <string name="app_name">MarsWeather</string>
    <string name="max_temp">max_temp</string>
    <string name="min_temp">min_temp</string>
    <string name="mars">Mars</string>
    <string name="earth">Earth</string>
    <string name="d0maxtemp">d0M</string>
    <string name="d1maxtemp">d1M</string>
    <string name="d2maxtemp">d2M</string>
    <string name="d3maxtemp">d3M</string>
    <string name="d4maxtemp">d4M</string>
    <string name="d5maxtemp">d5M</string>
    <string name="d6maxtemp">d6M</string>
    <string name="d0mintemp">d0m</string>
    <string name="d1mintemp">d1m</string>
    <string name="d2mintemp">d2m</string>
    <string name="d3mintemp">d3m</string>
    <string name="d4mintemp">d4m</string>
    <string name="d5mintemp">d5m</string>
    <string name="d6mintemp">d6m</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="uv_condition">UV condition</string>
    <string name="earthpressure">earthPressure</string>
    <string name="earthsunrise">earthSunrise</string>
    <string name="earthsunset">earthSunset</string>
    <string name="earthuv">earthUV</string>
    <string name="d0day">d0d</string>
    <string name="d1day">d1d</string>
    <string name="button_text">i</string>
</resources>