<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/EarthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/earth"
        android:textColor="#000000"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EarthDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/EarthDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Latest Date"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EarthText" />

    <TableLayout
        android:id="@+id/EtableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:stretchColumns="0,1"
        app:layout_constraintTop_toBottomOf="@+id/EarthDateText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/high_temperature" />

            <ImageView
                android:id="@+id/marsLowTempView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/low_temperature" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/EarthMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MaxTemp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/EarthMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MinTemp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/EtableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintTop_toBottomOf="@+id/EtableLayout1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Pressure"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/marsHighTempView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Sunrise"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Sunset"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="UV Index"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pressureView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/pressure" />

            <ImageView
                android:id="@+id/sunriseView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/sunrise" />

            <ImageView
                android:id="@+id/sunsetView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/moon" />

            <ImageView
                android:id="@+id/uvConditionView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/sunglasses" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/EarthPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/EarthSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/EarthSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/EarthUV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/MtableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="32dp"
        android:stretchColumns="0,1,2,3,4,5,6"
        app:layout_constraintTop_toBottomOf="@+id/EtableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/d0MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d0maxtemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/d1MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d1maxtemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d2MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d2maxtemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d3MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d3maxtemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d4MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d4maxtemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d5MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d5maxtemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d6MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d6maxtemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

        </TableRow>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/eBarChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/d0MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d0mintemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d1MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d1mintemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d2MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d2mintemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d3MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d3mintemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d4MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d4mintemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d5MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d5mintemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/d6MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d6mintemp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/d0day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/d1day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/d2day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/d3day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/d4day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/d5day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/d6day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16dp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/pictogramBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Pictograms by 'Chanut is Industries', 'Andi Nur Abdillah' \nand 'Daniela Baptista' from NounProject.com\n@Seoul"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="#CCCCCC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MtableLayout3"
        app:layout_constraintVertical_bias="0.111" />


</androidx.constraintlayout.widget.ConstraintLayout>